Adding Tabs Flex Container

--- a/input.css
+++ b/input.css
@@ -26,4 +26,10 @@
     left: 30%;
     @apply bg-softBlue absolute top-52 rounded-l-full;
   }
+  .bg-tabs {
+    width: 2000px;
+    height: 300px;
+    right: 60%;
+    @apply bg-softBlue absolute top-60 rounded-r-full;
+  }
 }
